--- a/package.json
+++ b/package.json
@@ -1,34 +1,1 @@
-{
-  "name": "vite-react-typescript-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
-  }
-}
+{"name":"stage-timer-app","version":"0.1.0","main":"index.js","scripts":{"start":"concurrently \"node server.js\" \"wait-on http://localhost:1000 && electron .\"","build":"electron-builder"},"dependencies":{"electronify-server":"^0.5.1","node-static":"^0.7.7"},"devDependencies":{"concurrently":"^9.1.2","electron":"^29.1.7","electron-builder":"^24.13.1","wait-on":"^7.2.0"},"build":{"appId":"com.stage-timer.app","productName":"Stage Timer App","copyright":"Copyright © 2024 Positive Developer","asar":true,"directories":{"output":"dist","buildResources":"public"},"win":{"target":["nsis"],"icon":"public/icon.ico"},"nsis":{"oneClick":false,"perMachine":true,"allowToChangeInstallationDirectory":true,"deleteAppDataOnUninstall":true,"installerIcon":"public/icon.ico","uninstallerIcon":"public/icon.ico"},"files":["**/*","!**/node_modules/*","!**/*.map","!src","!dist","!public/*"]}}
