--- a/package.json
+++ b/package.json
@@ -1,49 +1,75 @@
 {
     "name": "stage-timer-app",
     "version": "0.1.0",
-    "main": "index.js",
+    "description": "A flexible stage timer application for presentations and events",
+    "author": "Positive Developer",
+    "main": "main.js",
     "scripts": {
-        "start": "concurrently \"node server.js\" \"wait-on http://localhost:1000 && electron .\"",
-        "build": "electron-builder"
-    },
-    "dependencies": {
-        "electronify-server": "^0.5.1",
-        "node-static": "^0.7.7"
+        "start": "electron .",
+        "build": "cd vite-core && npm run build",
+        "build-app": "npm run build && electron-builder",
+        "dev": "cd vite-core && npm run dev"
     },
     "devDependencies": {
-        "concurrently": "^9.1.2",
+        "electron": "^13.6.9",
         "electron-builder": "^24.13.1",
-        "wait-on": "^7.2.0",
-        "electron": "^13.6.9"
+        "electron-packager": "^17.1.2"
     },
     "build": {
         "appId": "com.stage-timer.app",
         "productName": "Stage Timer App",
         "copyright": "Copyright © 2024 Positive Developer",
         "asar": false,
+        "compression": "maximum",
+        "removePackageScripts": true,
         "directories": {
             "output": "dist",
             "buildResources": "public"
         },
         "win": {
-            "target": ["nsis"],
-            "icon": "public/icon.ico"
+            "target": [
+                {
+                    "target": "nsis",
+                    "arch": ["x64"]
+                }
+            ],
+            "icon": "public/icon.ico",
+            "sign": false,
+            "publisherName": "Positive Developer",
+            "verifyUpdateCodeSignature": false
         },
         "nsis": {
-           "oneClick": false,
-            "perMachine": true,
-             "allowToChangeInstallationDirectory": true,
+            "oneClick": false,
+            "perMachine": false,
+            "allowElevation": true,
+            "allowToChangeInstallationDirectory": true,
             "deleteAppDataOnUninstall": true,
+            "createDesktopShortcut": true,
+            "createStartMenuShortcut": true,
+            "shortcutName": "Stage Timer",
             "installerIcon": "public/icon.ico",
-            "uninstallerIcon": "public/icon.ico"
+            "uninstallerIcon": "public/icon.ico",
+            "installerHeaderIcon": "public/icon.ico",
+            "installerSidebar": null,
+            "uninstallerSidebar": null,
+            "warningsAsErrors": false,
+            "displayLanguageSelector": false,
+            "language": "1033",
+            "multiLanguageInstaller": false,
+            "packElevateHelper": false,
+            "differentialPackage": false
         },
         "files": [
-            "**/*",
+            "main.js",
+            "vite-core/dist/**/*",
+            "vite-core/src/icons/**/*",
             "!**/node_modules/*",
             "!**/*.map",
-            "!src",
-            "!dist",
-            "!public/*"
+            "!vite-core/src/*",
+            "!vite-core/node_modules/*",
+            "!public/*",
+            "!server.js",
+            "!index.js"
         ]
     }
 }
